deploy/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-news-api
  namespace: ml-pipelines
  labels:
    app: fake-news-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-news-api
  template:
    metadata:
      labels:
        app: fake-news-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: fastapi-server
        image: my-company/fake_news_detector:api-latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: model-weights
          mountPath: /app/models
        - name: data-volume
          mountPath: /app/data
        - name: logs-volume
          mountPath: /app/logs
        resources:
          requests:
            cpu: "0.5"
            memory: "2Gi"
          limits:
            cpu: "1"
            memory: "4Gi"
            #nvidia.com/gpu: "1"
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 15
      volumes:
      - name: model-weights
        persistentVolumeClaim:
          claimName: pvc-models
      - name: data-volume
        persistentVolumeClaim:
          claimName: pvc-data
      - name: logs-volume
        persistentVolumeClaim:
          claimName: logs-pvc
