deploy/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fake-news-api-service
  namespace: ml-pipelines
spec:
  type: ClusterIP
  selector:
    app: fake-news-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
